updated several ul and li style elements, added nav link locations and style, fixed code spacing, added a tag styling

--- a/style.css
+++ b/style.css
@@ -20,3 +20,8 @@ main {
 #Blue-list {
   color: blue;
 }
+
+a {
+  color:slategrey;
+  font-family: cursive;
+}
